...
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txvLogin" />

            <TextView
                android:id="@+id/txvEmail"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:text="Email"
                app:layout_constraintStart_toStartOf="@id/edtEmail"
                app:layout_constraintTop_toBottomOf="@id/edtName" />
...
